--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<main role="main" class="container text-center">
+    <router-outlet></router-outlet>
+</main>
 <app-footer></app-footer>
