--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,16 @@
-<p>
-  header works!
-</p>
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" [routerLink]="['/home']">Site</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+      aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <p class="navbar-nav mr-auto">
+        <a class="nav-item nav-link" [routerLink]="['/home']" [routerLinkActive]="['active']">Home</a>
+        <a class="nav-item nav-link" [routerLink]="['/login']" [routerLinkActive]="['active']">Login</a>
+        <a class="nav-item nav-link" [routerLink]="['/register']" [routerLinkActive]="['active']">Register</a>
+      </p>
+    </div>
+  </nav>
+</header>
