Added Lazy loading modules

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,6 +10,8 @@
         <a class="nav-item nav-link" [routerLink]="['/home']" [routerLinkActive]="['active']">Home</a>
         <a class="nav-item nav-link" [routerLink]="['/login']" [routerLinkActive]="['active']">Login</a>
         <a class="nav-item nav-link" [routerLink]="['/register']" [routerLinkActive]="['active']">Register</a>
+        <a class="nav-item nav-link" [routerLink]="['/dashboard']" [routerLinkActive]="['active']">Dashboard</a> 
+        <a class="nav-item nav-link" [routerLink]="['/profile']" [routerLinkActive]="['active']">Profile</a> 
       </p>
     </div>
   </nav>
