--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,9 +1,11 @@
-<form class="form-signin">
+<form class="form-signin mt-5">
   <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Sign up</h1>
   <label for="inputEmail" class="sr-only">Email address</label>
   <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
   <label for="inputPassword" class="sr-only">Password</label>
   <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  <label for="inputPassword" class="sr-only">Phone</label>
+  <input type="text" id="inputPassword" class="form-control" placeholder="Phone" required="">
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Signup</button>
 </form>
