Reactive Forms, Template driven forms.

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,11 +1,65 @@
-<form class="form-signin mt-5">
+<form class="mt-5" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
   <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Sign up</h1>
+
+  <label for="inputName" class="sr-only">Name</label>
+  <input type="text" id="inputName" formControlName="name" class="form-control" placeholder="Enter name" required=""
+    [ngClass]="{ 'is-invalid': submitted && f.name.errors }">
+  <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+    <div *ngIf="f.name.errors.required">Name is required</div>
+  </div>
+  <br>
+
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+    <label class="form-check-label" for="inlineRadio1">Male</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+    <label class="form-check-label" for="inlineRadio2">Female</label>
+  </div>
+  <br><br>
+
   <label for="inputEmail" class="sr-only">Email address</label>
-  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+  <input type="email" id="inputEmail" formControlName="email" class="form-control" placeholder="Email address" required=""
+    [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+  <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+    <div *ngIf="f.email.errors.required">Email is required</div>
+    <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+  </div>
+  <br>
+
+  <label for="inputBdate" class="sr-only">Birthdate</label>
+  <input type="date" id="inputBdate" class="form-control" required=""><br>
+
+  <label for="inputPhone" class="sr-only">Phone</label>
+  <input type="text" id="inputPhone" class="form-control" placeholder="Phone" required=""><br>
+
   <label for="inputPassword" class="sr-only">Password</label>
-  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-  <label for="inputPassword" class="sr-only">Phone</label>
-  <input type="text" id="inputPassword" class="form-control" placeholder="Phone" required="">
+  <input type="password" id="inputPassword" formControlName="password" class="form-control" placeholder="Password"
+    required="" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
+  <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+    <div *ngIf="f.password.errors.required">Password is required</div>
+    <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+  </div><br>
+
+
+  <label for="inputcPassword" class="sr-only">CPassword</label>
+  <input type="password" id="inputcPassword" formControlName="cPassword" class="form-control" placeholder="Confirm Password"
+    required="" [ngClass]="{ 'is-invalid': submitted && f.cPassword.errors }">
+  <div *ngIf="f.password.value != f.cPassword.value" class="error">Passwords must match</div><br>
+  <div *ngIf="submitted && f.cPassword.errors" class="invalid-feedback">
+    <div *ngIf="f.cPassword.errors.required">Confirm Password is required</div>
+  </div>
+
+
+  <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">
+      I agree all bootstrap terms and conditions
+    </label>
+  </div>
+  <br>
+
   <button class="btn btn-lg btn-primary btn-block" type="submit">Signup</button>
 </form>
