--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,14 +1,9 @@
-<form class="form-signin mt-5">
+<form class="form-signin mt-5" #f="ngForm" (submit)="login(f)">
   <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
   <label for="inputEmail" class="sr-only">Email address</label>
-  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" name="email" [(ngModel)]="email" required="" autofocus="">
   <label for="inputPassword" class="sr-only">Password</label>
-  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-  <div class="checkbox mb-3">
-    <label>
-      <input type="checkbox" value="remember-me"> Remember me
-    </label>
-  </div>
+  <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password" [(ngModel)]="password" required="">
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 </form>
